añadiendo imagenes, editando reseñas, moviendo estructura html

--- a/src/about-us.html
+++ b/src/about-us.html
@@ -96,8 +96,8 @@
                       </li>
                       <li class="rd-nav-item active"><a class="rd-nav-link" href="about-us.html">Sobre Mí</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Proyectos</a>
-                      </li>
+                      <!--<li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Proyectos</a>
+                      </li> -->
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contáctame</a>
                       </li>
                     </ul>
@@ -176,7 +176,7 @@
             <h3 class="breadcrumbs-custom-title">Sobre mí</h3>
             <div class="breadcrumbs-custom-decor"></div>
           </div>
-          <div class="box-transform" style="background-image: url(images/bg-1.jpg);"></div>
+          <div class="box-transform" style="background-image: url(./images/codeando.jpeg);"></div>
         </div>
         <div class="container">
           <ul class="breadcrumbs-custom-path">
@@ -202,13 +202,13 @@
               <div class="tab-content tab-content-1">
                 <div class="tab-pane fade show active" id="tabs-4-1">
                   <h4>Un poco sobre mí</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur.</p><img src="images/about-1-835x418.jpg" alt="" width="835" height="418"/>
+                  <p>Soy mamá de 2 maravillosos pequeños, estudié en la Universidad Nacional de Ingenieria la carrera de Arquitectura, pero tuve que dejarla en el 6to ciclo.</p>
+                  <p>Llegue a Laboratoria gracias a una publicación del comercio, y emprendí ese viaje hacia la programación. Puedo decir que aprendí muchísimo y la Cinthia de ahora es completamente diferente a la Cinthia de Antes.</p><img src="./images/sobre-mi.jpeg" alt="" width="835" height="418"/>
                 </div>
                 <div class="tab-pane fade" id="tabs-4-2">
                   <h4>Mis Fortalezas</h4>
-                  <p>Lotus advenas ducunt ad gemna. Ubi est domesticus domina? Heu, barbatus mens! Cum elogium favere, omnes lubaes tractare talis, barbatus adiuratores. Mirabilis hydras ducunt ad danista. Dominas sunt accentors de germanus cacula. Amicitias prarere in alta muta! Ecce, bubo! Nunquam promissio verpa. Talis, primus fugas recte consumere de audax, festus indictio. Nunquam quaestio scutum. Valebats</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><img src="images/about-1-835x418.jpg" alt="" width="835" height="418"/>
+                  <p> Mi determinación es algo que siempre recalco, pues he aprendido a seguir sin importar las dificultades que se me presenten en el camino.</p>
+                  <p> La Adaptabilidad también es algo que aprendi mucho con la ejecución de los proyectos en equipo a lo largo del bootcamp. </p><img src="./images/soft1.jpeg" alt="" width="835" height="418"/>
                 </div>
                 <div class="tab-pane fade" id="tabs-4-3">
                   <h4>Lo que quiero llegar a ser</h4>
@@ -238,7 +238,7 @@
                   </div>
                   <div class="unit-body">
                     <h5 class="box-icon-classic-title"><a href="#">Habilidades blandas</a></h5>
-                    <p class="box-icon-classic-text">Lotus advenas ducunt ad gemna. Ubi est domesticus domina heu.</p>
+                    <p class="box-icon-classic-text">Habilidades formadas durante el proceso de Trabajo individual y colaborativo.</p>
                   </div>
                 </div>
               </article>
@@ -251,7 +251,7 @@
                   </div>
                   <div class="unit-body">
                     <h5 class="box-icon-classic-title"><a href="#">+6 Proyectos creados</a></h5>
-                    <p class="box-icon-classic-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh</p>
+                    <p class="box-icon-classic-text">6 proyectos creados a lo largo del bootcamp de Laboratoria</p>
                   </div>
                 </div>
               </article>
@@ -264,7 +264,7 @@
                   </div>
                   <div class="unit-body">
                     <h5 class="box-icon-classic-title"><a href="#">Habilidades Técnicas</a></h5>
-                    <p class="box-icon-classic-text">Albus, dexter particulas grauiter consumere de ferox, bi-color abactus.</p>
+                    <p class="box-icon-classic-text">Conocimiento aprendido usando el Autiaprendizaje.</p>
                   </div>
                 </div>
               </article>
@@ -277,24 +277,28 @@
         <div class="container">
           <div class="row row-60 justify-content-center justify-content-xxl-between">
             <div class="col-lg-6 col-xxl-5 position-static">
-              <h3>Mi Trayectoria</h3>
+              <h3>Meetups y Talleres</h3>
               <div class="tabs-custom" id="tabs-5">
                 <div class="tab-content tab-content-1">
                   <div class="tab-pane fade" id="tabs-5-1">
-                    <h5 class="font-weight-normal text-transform-none text-spacing-75">PizzaHouse Establishment and First Happy Clients</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh</p>
+                    <h5 class="font-weight-normal text-transform-none text-spacing-75">Taller Stefanini</h5>
+                    <p>Tuvimos un recorrido por sus instalaciones y una charla sobre Digital Business, cambiando nuestra perspectiva de las soluciones que brindan.</p>
                   </div>
                   <div class="tab-pane fade" id="tabs-5-2">
-                    <h5 class="font-weight-normal text-transform-none text-spacing-75">Organizing a Free Pizza Delivery Service in Los Angeles</h5>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+                    <h5 class="font-weight-normal text-transform-none text-spacing-75">Charla Manki</h5>
+                    <p>Manki,una comunidad para mujeres emprendedoras y super creativas.</p>
                   </div>
                   <div class="tab-pane fade" id="tabs-5-3">
-                    <h5 class="font-weight-normal text-transform-none text-spacing-75">Offering an Extended Range of Pizzas, Burgers, and Salads</h5>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+                    <h5 class="font-weight-normal text-transform-none text-spacing-75">Taller IBM</h5>
+                    <p>Tuvimos el taller de "Crea tu primer Chatbot", con tecnicas sobre  Design Thinking y una intro de Data Science.</p>
                   </div>
                   <div class="tab-pane fade show active" id="tabs-5-4">
-                    <h5 class="font-weight-normal text-transform-none text-spacing-75">Partnering with Organic Farms Located in California</h5>
-                    <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur.</p>
+                    <h5 class="font-weight-normal text-transform-none text-spacing-75">Hackeando la Desigualdad </h5>
+                    <p>En marzo 2019 se realizó en Laboratoria una hackaton en conmemoración del día de la mujer, se tituló "Hackeando la desigualdad" (12 horas seguidas codeando).</p>
+                  </div>
+                  <div class="tab-pane fade show active" id="tabs-5-5">
+                    <h5 class="font-weight-normal text-transform-none text-spacing-75">Taller de node.js por LIMA JS</h5>
+                    <p>Taller donde logre aprende y profundizar en conocimientos sobre node.js.</p>
                   </div>
                 </div>
                 <div class="list-history-wrap">
@@ -304,20 +308,22 @@
                     <li class="list-history-item" role="presentation"><a href="#tabs-5-2" data-toggle="tab">
                         <div class="list-history-circle"></div>Enero 2019</a></li>
                     <li class="list-history-item" role="presentation"><a href="#tabs-5-3" data-toggle="tab">
+                        <div class="list-history-circle"></div>Febrero 2019</a></li>
+                    <li class="list-history-item" role="presentation"><a href="#tabs-5-4" data-toggle="tab">
                         <div class="list-history-circle"></div>Marzo 2019</a></li>
-                    <li class="list-history-item" role="presentation"><a class="active" href="#tabs-5-4" data-toggle="tab">
-                        <div class="list-history-circle"></div>Abril 2019</a></li>
+                    <li class="list-history-item" role="presentation"><a class="active" href="#tabs-5-5" data-toggle="tab">
+                      <div class="list-history-circle"></div>Abril 2019</a></li>
                   </ul>
                 </div>
               </div>
             </div>
             <div class="col-md-9 col-lg-6 position-static index-1">
-              <div class="bg-image-right-1 bg-image-right-lg"><img src="images/our_history-1110x710.jpg" alt="" width="1110" height="710"/>
-                <div class="link-play-modern"><a class="icon mdi mdi-play" data-lightgallery="item" href="https://www.youtube.com/watch?v=1UWpbtUupQQ"></a>
-                  <div class="link-play-modern-title">En<span>Meetups</span></div>
+              <div class="bg-image-right-1 bg-image-right-lg"><img src="./images/charla-ibm.jpg" alt="" width="1110" height="710"/>
+                <!--<div class="link-play-modern"><a class="icon mdi mdi-play" data-lightgallery="item" href="https://www.youtube.com/watch?v=1UWpbtUupQQ"></a>
+                  <div class="link-play-modern-title">En<span>Meetups y Talleres</span></div>
                   <div class="link-play-modern-decor"></div>
-                </div>
-                <div class="box-transform" style="background-image: url(images/our_history-1110x710.jpg);"></div>
+                </div> -->
+                <div class="box-transform" style="background-image: url(./images/charla-ibm.jpg);"></div>
               </div>
             </div>
           </div>
