--- a/src/index.html
+++ b/src/index.html
@@ -171,7 +171,7 @@
       <!-- Swiper-->
       <section class="section swiper-container swiper-slider swiper-slider-2 swiper-slider-3" data-loop="true" data-autoplay="5000" data-simulate-touch="false" data-slide-effect="fade">
         <div class="swiper-wrapper text-sm-left">
-          <div class="swiper-slide context-dark" data-slide-bg="images/slide-1-1920x753.jpg">
+          <div class="swiper-slide context-dark" data-slide-bg="./images/imagen1.jpg">
             <div class="swiper-slide-caption section-md">
               <div class="container">
                 <div class="row">
@@ -183,7 +183,7 @@
               </div>
             </div>
           </div>
-          <div class="swiper-slide context-dark" data-slide-bg="images/slide-2-1920x753.jpg">
+          <div class="swiper-slide context-dark" data-slide-bg="./images/imagen2.jpg">
             <div class="swiper-slide-caption section-md">
               <div class="container">
                 <div class="row">
@@ -295,7 +295,7 @@
       </section>
 
       <!-- Section CTA-->
-      <section class="primary-overlay section parallax-container" data-parallax-img="images/bg-3.jpg">
+      <section class="primary-overlay section parallax-container" data-parallax-img="./images/portada3.jpg">
         <div class="parallax-content section-xl context-dark text-md-left">
           <div class="container">
             <div class="row justify-content-end">
@@ -319,70 +319,71 @@
             <div class="col-sm-6 col-lg-4 col-xl-3">
               <!-- Product-->
               <article class="product wow fadeInLeft" data-wow-delay=".15s">
-                <div class="product-figure"><img src="images/product-1-161x162.png" alt="" width="161" height="162"/>
+                <div class="product-figure"><img src="./images/JavaScript.png" alt="" width="161" height="162"/>
                 </div>
                 <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star text-gray-13"></span>
                 </div>
                 <h6 class="product-title">Javascript(EMS 6)</h6>
-                <div class="product-price-wrap">
-                  <div class="product-price">$24.00</div>
-                </div>
-                <div class="product-button">
+                <!--<div class="product-button">
                   <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to cart</a></div>
                   <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View Product</a></div>
-                </div>
+                </div>-->
               </article>
             </div>
             <div class="col-sm-6 col-lg-4 col-xl-3">
               <!-- Product-->
               <article class="product wow fadeInLeft" data-wow-delay=".1s">
-                <div class="product-figure"><img src="images/product-2-161x162.png" alt="" width="161" height="162"/>
+                <div class="product-figure"><img src="./images/html.png" alt="" width="161" height="162"/>
                 </div>
                 <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span>
                 </div>
                 <h6 class="product-title">HTML 5</h6>
-                <div class="product-price-wrap">
-                  <div class="product-price">$24.00</div>
-                </div>
-                <div class="product-button">
+                <!-- <div class="product-button">
                   <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to cart</a></div>
                   <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View Product</a></div>
-                </div><span class="product-badge product-badge-new">New</span>
+                </div> -->
               </article>
             </div>
             <div class="col-sm-6 col-lg-4 col-xl-3">
               <!-- Product-->
               <article class="product wow fadeInLeft" data-wow-delay=".05s">
-                <div class="product-figure"><img src="images/product-3-161x162.png" alt="" width="161" height="162"/>
+                <div class="product-figure"><img src="./images/css.png" alt="" width="161" height="162"/>
                 </div>
                 <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star text-gray-13"></span>
                 </div>
                 <h6 class="product-title">CSS 3</h6>
-                <div class="product-price-wrap">
-                  <div class="product-price">$24.00</div>
-                </div>
-                <div class="product-button">
+                <!-- <div class="product-button">
                   <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to cart</a></div>
                   <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View Product</a></div>
+                </div> -->
+              </article>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3">
+              <!-- Product-->
+              <article class="product wow fadeInLeft" data-wow-delay=".05s">
+                <div class="product-figure"><img src="./images/bootstrap.png" alt="" width="161" height="162"/>
                 </div>
+                <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star text-gray-13"></span><span class="mdi mdi-star text-gray-13"></span>
+                </div>
+                <h6 class="product-title">Bootstrap</h6>
+                <!-- <div class="product-button">
+                  <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to cart</a></div>
+                  <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View Product</a></div>
+                </div> -->
               </article>
             </div>
             <div class="col-sm-6 col-lg-4 col-xl-3">
               <!-- Product-->
               <article class="product wow fadeInLeft">
-                <div class="product-figure"><img src="images/product-4-161x162.png" alt="" width="161" height="162"/>
+                <div class="product-figure"><img src="./images/node.png" alt="" width="161" height="162"/>
                 </div>
-                <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span>
+                <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star text-gray-13"></span><span class="mdi mdi-star text-gray-13"></span>
                 </div>
                 <h6 class="product-title">Node.js</h6>
-                <div class="product-price-wrap">
-                  <div class="product-price product-price-old">$40.00</div>
-                  <div class="product-price">$24.00</div>
-                </div>
-                <div class="product-button">
+                <!-- <div class="product-button">
                   <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to cart</a></div>
                   <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View Product</a></div>
-                </div><span class="product-badge product-badge-sale">Sale</span>
+                </div> -->
               </article>
             </div>
           </div>
@@ -390,14 +391,15 @@
       </section>
 
       <!-- Section CTA-->
-      <section class="primary-overlay section parallax-container" data-parallax-img="images/bg-4.jpg">
+      <section class="primary-overlay section parallax-container" data-parallax-img="./images/Soft.png">
         <div class="parallax-content section-xxl context-dark text-md-left">
           <div class="container">
             <div class="row justify-content-end">
               <div class="col-sm-9 col-md-7 col-lg-5">
                 <div class="cta-modern">
                   <h3 class="cta-modern-title cta-modern-title-2 oh-desktop"><span class="d-inline-block wow fadeInLeft">Habilidades Blandas</span></h3>
-                  <p class="cta-modern-text cta-modern-text-2 oh-desktop" data-wow-delay=".1s"><span class="cta-modern-decor cta-modern-decor-2 wow slideInLeft"></span><span class="d-inline-block wow slideInUp">Taste some of the best PizzaHouse salads!</span></p><a class="button button-lg button-secondary button-winona wow fadeInRight" href="contacts.html" data-wow-delay=".2s">contact us</a>
+                  <p class="lead">Estas son algunas habilidades que he ido desarrollando durante mi proceso en Laboratoria.</p>
+                  <p class="cta-modern-text cta-modern-text-2 oh-desktop" data-wow-delay=".1s"><span class="cta-modern-decor cta-modern-decor-2 wow slideInLeft"></span><span class="d-inline-block wow slideInUp">Soft skills!</span></p><a class="button button-lg button-secondary button-winona wow fadeInRight" href="contacts.html" data-wow-delay=".2s">contact us</a>
                 </div>
               </div>
             </div>
