subiendo cambios en links, imagenes, iconos

--- a/src/about-us.html
+++ b/src/about-us.html
@@ -194,7 +194,7 @@
                 <li class="list-category-item wow fadeInRight" role="presentation" data-wow-delay="0s"><a class="active" href="#tabs-4-1" data-toggle="tab">Sobre mí</a></li>
                 <li class="list-category-item wow fadeInRight" role="presentation" data-wow-delay=".1s"><a href="#tabs-4-2" data-toggle="tab">Mis Fortalezas</a></li>
                 <li class="list-category-item wow fadeInRight" role="presentation" data-wow-delay=".2s"><a href="#tabs-4-3" data-toggle="tab">Mis metas</a></li>
-                <li class="list-category-item wow fadeInRight" role="presentation" data-wow-delay=".3s"><a href="#tabs-4-4" data-toggle="tab">Mis valores</a></li>
+                <li class="list-category-item wow fadeInRight" role="presentation" data-wow-delay=".3s"><a href="#tabs-4-4" data-toggle="tab">Mis logros y desafíos</a></li>
               </ul><a class="button button-xl button-primary button-winona" href="contacts.html">Contáctame</a>
             </div>
             <div class="col-lg-8 col-xl-9">
@@ -206,19 +206,19 @@
                   <p>Llegue a Laboratoria gracias a una publicación del comercio, y emprendí ese viaje hacia la programación. Puedo decir que aprendí muchísimo y la Cinthia de ahora es completamente diferente a la Cinthia de Antes.</p><img src="./images/sobre-mi.jpeg" alt="" width="835" height="418"/>
                 </div>
                 <div class="tab-pane fade" id="tabs-4-2">
-                  <h4>Mis Fortalezas</h4>
-                  <p> Mi determinación es algo que siempre recalco, pues he aprendido a seguir sin importar las dificultades que se me presenten en el camino.</p>
-                  <p> La Adaptabilidad también es algo que aprendi mucho con la ejecución de los proyectos en equipo a lo largo del bootcamp. </p><img src="./images/soft1.jpeg" alt="" width="835" height="418"/>
+                  <h4>Mis Fortalezas y Debilidades</h4>
+                  <p>Soy una mujer con determinación. Los obstáculos en mi camino no han sido impedimento para salir adelante. Me adapto fácilmente a nuevos entornos logrando el éxito de los proyectos planteados. </p>
+                  <p>  Hablar en público es una de mis debilidades, pero vengo trabajando para mejor este aspecto en mi día a día. Asimismo, estoy reforzando mis conocimientos básicos de inglés. </p><img src="./images/soft1.jpeg" alt="" width="835" height="418"/>
                 </div>
                 <div class="tab-pane fade" id="tabs-4-3">
                   <h4>Lo que quiero llegar a ser</h4>
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur.</p>
-                  <p>Lotus advenas ducunt ad gemna. Ubi est domesticus domina? Heu, barbatus mens! Cum elogium favere, omnes lubaes tractare talis, barbatus adiuratores. Mirabilis hydras ducunt ad danista. Dominas sunt accentors de germanus cacula. Amicitias prarere in alta muta! Ecce, bubo! Nunquam promissio verpa. Talis, primus fugas recte consumere de audax, festus indictio. Nunquam quaestio scutum. Valebats</p><img src="images/about-1-835x418.jpg" alt="" width="835" height="418"/>
+                  <p>Quiero trabajar en una empresa que me permita desarrollarme profesionalmente. </p>
+                  <p>Ser una gran programadora y una full stack developer. Como parte de mi aprendizaje, me he planteado conocer sobre inteligencia artificial y otros lenguajes de programación.</p><img src="images/about-1-835x418.jpg" alt="" width="835" height="418"/>
                 </div>
                 <div class="tab-pane fade" id="tabs-4-4">
                   <h4>Integridad y Dedicación</h4>
-                  <p>Albus, dexter particulas grauiter consumere de ferox, bi-color abactus. Impositios studere, tanquam mirabilis hippotoxota. Cur torus manducare? Pol, vox! Cum barcas nocere, omnes specieses contactus</p>
-                  <p>Lotus advenas ducunt ad gemna. Ubi est domesticus domina? Heu, barbatus mens! Cum elogium favere, omnes lubaes tractare talis, barbatus adiuratores. Mirabilis hydras ducunt ad danista. Dominas sunt accentors de germanus cacula. Amicitias prarere in alta muta! Ecce, bubo! Nunquam promissio verpa. Talis, primus fugas recte consumere de audax, festus indictio. Nunquam quaestio scutum. Valebats</p><img src="images/about-1-835x418.jpg" alt="" width="835" height="418"/>
+                  <p>Logros: Ingresar a la Universidad Nacional de Ingeniería. (2014), Trabajar con una nueva metodología, haciéndome ver todo desde diferente perspectiva. (2018), Concluir el Bootcamp de Laboratoria. (2019)</p>
+                  <p>Desafíos: Cambiar la arquitectura por la programación. Es una gran aventura, donde siento que ambas profesiones se fusionan. Enfrentarme a nuevos dilemas para mejorar un proyecto ha sido un gran reto, rescato mi perseverancia, mi comunicación y confianza para lograr el éxito.    </p><img src="images/about-1-835x418.jpg" alt="" width="835" height="418"/>
                 </div>
               </div>
             </div>
