--- a/src/index.html
+++ b/src/index.html
@@ -96,8 +96,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">Sobre mí</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Proyectos</a>
-                      </li>
+                      
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contáctame</a>
                       </li>
                     </ul>
@@ -190,7 +189,7 @@
                   <div class="col-sm-8 col-lg-7 offset-lg-1 offset-xxl-0">
                     <h1 class="oh swiper-title"><span class="d-inline-block" data-caption-animate="slideInDown" data-caption-delay="0">Front-end Developer</span></h1>
                     <p class="big swiper-text" data-caption-animate="fadeInRight" data-caption-delay="300">El único limite que tiene el código es el que cada persona crea.</p>
-                    <div class="button-wrap oh"><a class="button button-lg button-primary button-winona button-shadow-2" href="#" data-caption-animate="slideInUp" data-caption-delay="0">Mis proyectos</a></div>
+                    <div class="button-wrap oh"><a class="button button-lg button-primary button-winona button-shadow-2" href="https://drive.google.com/open?id=1ZoIomPz6py47MBXJ3QSpJIkM6CI326ws" data-caption-animate="slideInUp" data-caption-delay="0">Mi CV</a></div>
                   </div>
                 </div>
               </div>
@@ -236,8 +235,8 @@
                 <article class="services-terri wow slideInDown">
                   <div class="services-terri-figure"><img src="images/menu-2-370x278.jpg" alt="" width="370" height="278"/>
                   </div>
-                  <div class="services-terri-caption"><span class="services-terri-icon linearicons-pizza"></span>
-                    <h5 class="services-terri-title"><a href="#">Cipher</a></h5>
+                  <div class="services-terri-caption"><span class="services-terri-icon linearicons-map2"></span>
+                    <h5 class="services-terri-title"><a href="https://github.com/CinthiaVilcachagua/lim-2018-11-bc-core-am-cipher">Cipher</a></h5>
                   </div>
                 </article>
               </div>
@@ -248,8 +247,8 @@
                 <article class="services-terri wow slideInUp">
                   <div class="services-terri-figure"><img src="images/menu-3-370x278.jpg" alt="" width="370" height="278"/>
                   </div>
-                  <div class="services-terri-caption"><span class="services-terri-icon linearicons-hamburger"></span>
-                    <h5 class="services-terri-title"><a href="#">Data Lol</a></h5>
+                  <div class="services-terri-caption"><span class="services-terri-icon linearicons-rocket"></span>
+                    <h5 class="services-terri-title"><a href="https://github.com/CinthiaVilcachagua/lim-2018-11-bc-core-am-data-lovers">Data Lol</a></h5>
                   </div>
                 </article>
               </div>
@@ -260,8 +259,8 @@
                 <article class="services-terri wow slideInDown">
                   <div class="services-terri-figure"><img src="images/menu-4-370x278.jpg" alt="" width="370" height="278"/>
                   </div>
-                  <div class="services-terri-caption"><span class="services-terri-icon linearicons-ice-cream"></span>
-                    <h5 class="services-terri-title"><a href="#">Worldbank</a></h5>
+                  <div class="services-terri-caption"><span class="services-terri-icon linearicons-thumbs-up"></span>
+                    <h5 class="services-terri-title"><a href="https://github.com/CinthiaVilcachagua/scl-2018-12-bc-core-data-lovers">Worldbank</a></h5>
                   </div>
                 </article>
               </div>
@@ -272,8 +271,8 @@
                 <article class="services-terri wow slideInUp">
                   <div class="services-terri-figure"><img src="images/menu-5-370x278.jpg" alt="" width="370" height="278"/>
                   </div>
-                  <div class="services-terri-caption"><span class="services-terri-icon linearicons-coffee-cup"></span>
-                    <h5 class="services-terri-title"><a href="#">Laboratorinas</a></h5>
+                  <div class="services-terri-caption"><span class="services-terri-icon linearicons-users"></span>
+                    <h5 class="services-terri-title"><a href="https://github.com/CinthiaVilcachagua/LIM008-social-network">Laboratorinas</a></h5>
                   </div>
                 </article>
               </div>
@@ -285,7 +284,7 @@
                   <div class="services-terri-figure"><img src="images/menu-6-370x278.jpg" alt="" width="370" height="278"/>
                   </div>
                   <div class="services-terri-caption"><span class="services-terri-icon linearicons-steak"></span>
-                    <h5 class="services-terri-title"><a href="#">Burguer Queen</a></h5>
+                    <h5 class="services-terri-title"><a href="https://github.com/CinthiaVilcachagua/app-rimac-seguros">Reto-Rimac</a></h5>
                   </div>
                 </article>
               </div>
