--- a/src/contacts.html
+++ b/src/contacts.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./images/Cinthia-minilogo.png" type="image/x-icon">
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:100,300,300i,400,500,600,700,900%7CRaleway:500">
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -64,7 +64,7 @@
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
-                  <div class="rd-navbar-brand"><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/logo-198x66.png" alt="" width="198" height="66"/></a></div>
+                  <div class="rd-navbar-brand"><a class="brand" href="index.html"><img class="brand-logo-dark" src="./images/Cinthia-minilogo1.png" alt="" width="198" height="66"/></a></div>
                 </div>
                 <div class="rd-navbar-right rd-navbar-nav-wrap">
                   <div class="rd-navbar-aside">
@@ -83,10 +83,10 @@
                       </li>
                     </ul>
                     <ul class="list-share-2">
-                      <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                      <li><a class="icon mdi mdi-twitter" href="#"></a></li>
+                      <li><a class="icon mdi github-circle" href="https://github.com/CinthiaVilcachagua"></a></li>
+                      <li><a class="icon mdi mdi-linkedin" href="https://www.linkedin.com/in/cinthiavilcachagua/"></a></li>
+                      <li><a class="icon mdi mdi-twitter" href="https://twitter.com/CinthiaVilcach1"></a></li>
                       <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                      <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
                     </ul>
                   </div>
                   <div class="rd-navbar-main">
@@ -344,10 +344,10 @@
                   </div>
                   <div class="wow slideInRight">
                     <ul class="list-inline footer-social-list footer-social-list-2 footer-social-list-3">
-                      <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                      <li><a class="icon mdi mdi-twitter" href="#"></a></li>
+                      <li><a class="icon mdi github-circle" href="https://github.com/CinthiaVilcachagua"></a></li>
+                      <li><a class="icon mdi mdi-linkedin" href="https://www.linkedin.com/in/cinthiavilcachagua/"></a></li>
+                      <li><a class="icon mdi mdi-twitter" href="https://twitter.com/CinthiaVilcach1"></a></li>
                       <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                      <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
                     </ul>
                   </div>
                 </div>
