--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./images/Cinthia-minilogo.png" type="image/x-icon">
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:100,300,300i,400,500,600,700,900%7CRaleway:500">
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -64,7 +64,7 @@
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
-                  <div class="rd-navbar-brand"><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/logo-198x66.png" alt="" width="198" height="66"/></a></div>
+                  <div class="rd-navbar-brand"><a class="brand" href="index.html"><img class="brand-logo-dark" src="./images/Cinthia-minilogo1.png" alt="" /></a></div>
                 </div>
                 <div class="rd-navbar-right rd-navbar-nav-wrap">
                   <div class="rd-navbar-aside">
@@ -83,10 +83,10 @@
                       </li>
                     </ul>
                     <ul class="list-share-2">
-                      <li><a class="icon mdi mdi-github-circle" href="#"></a></li>
-                      <li><a class="icon mdi mdi-twitter" href="#"></a></li>
+                      <li><a class="icon mdi mdi-github-circle" href="https://github.com/CinthiaVilcachagua"></a></li>
+                      <li><a class="icon mdi mdi-linkedin" href="https://www.linkedin.com/in/cinthiavilcachagua/"></a></li>
+                      <li><a class="icon mdi mdi-twitter" href="https://twitter.com/CinthiaVilcach1"></a></li>
                       <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                      <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
                     </ul>
                   </div>
                   <div class="rd-navbar-main">
@@ -175,7 +175,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-sm-9 col-md-8 col-lg-7 col-xl-7 offset-lg-1 offset-xxl-0">
-                    <h1 class="oh swiper-title"><span class="d-inline-block" data-caption-animate="slideInUp" data-caption-delay="0">Cinthia Vilcachagua</span></h1>
+                    <h1 class=""><span class="d-inline-block" data-caption-animate="slideInUp" data-caption-delay="0">Cinthia Vilcachagua</span></h1>
                     <p class="big swiper-text" data-caption-animate="fadeInLeft" data-caption-delay="300">Front-end Developer egresada de Laboratoria!</p><a class="button button-lg button-primary button-winona button-shadow-2" href="about-us.html" data-caption-animate="fadeInUp" data-caption-delay="300">Sobre mí</a>
                   </div>
                 </div>
@@ -187,7 +187,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-sm-8 col-lg-7 offset-lg-1 offset-xxl-0">
-                    <h1 class="oh swiper-title"><span class="d-inline-block" data-caption-animate="slideInDown" data-caption-delay="0">Front-end Developer</span></h1>
+                    <h1 class=""><span class="d-inline-block" data-caption-animate="slideInDown" data-caption-delay="0">Front-end Developer</span></h1>
                     <p class="big swiper-text" data-caption-animate="fadeInRight" data-caption-delay="300">El único limite que tiene el código es el que cada persona crea.</p>
                     <div class="button-wrap oh"><a class="button button-lg button-primary button-winona button-shadow-2" href="https://drive.google.com/open?id=1ZoIomPz6py47MBXJ3QSpJIkM6CI326ws" data-caption-animate="slideInUp" data-caption-delay="0">Mi CV</a></div>
                   </div>
@@ -360,6 +360,20 @@
             <div class="col-sm-6 col-lg-4 col-xl-3">
               <!-- Product-->
               <article class="product wow fadeInLeft" data-wow-delay=".05s">
+                <div class="product-figure"><img src="./images/firebase.png" alt="" width="161" height="162"/>
+                </div>
+                <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star text-gray-13"></span><span class="mdi mdi-star text-gray-13"></span>
+                </div>
+                <h6 class="product-title">Firebase</h6>
+                <!-- <div class="product-button">
+                  <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to cart</a></div>
+                  <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View Product</a></div>
+                </div> -->
+              </article>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3">
+              <!-- Product-->
+              <article class="product wow fadeInLeft" data-wow-delay=".05s">
                 <div class="product-figure"><img src="./images/bootstrap.png" alt="" width="161" height="162"/>
                 </div>
                 <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star text-gray-13"></span><span class="mdi mdi-star text-gray-13"></span>
@@ -516,10 +530,11 @@
                   </div>
                   <div class="wow slideInRight">
                     <ul class="list-inline footer-social-list footer-social-list-2 footer-social-list-3">
-                      <li><a class="icon mdi mdi-github-circle" href="#"></a></li>
-                      <li><a class="icon mdi mdi-twitter" href="#"></a></li>
+                      <li><a class="icon mdi mdi-github-circle" href="https://github.com/CinthiaVilcachagua"></a></li>
+                      <li><a class="icon mdi mdi-linkedin" href="https://www.linkedin.com/in/cinthiavilcachagua/"></a></li>
+                      <li><a class="icon mdi mdi-twitter" href="https://twitter.com/CinthiaVilcach1"></a></li>
                       <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                      <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
+                      
                     </ul>
                   </div>
                 </div>
