--- a/src/index.html
+++ b/src/index.html
@@ -265,7 +265,7 @@
                 <article class="services-terri wow slideInDown">
                   <div class="services-terri-figure"><img src="images/menu-4-370x278.jpg" alt="" width="370" height="278"/>
                   </div>
-                  <div class="services-terri-caption">"><span class="services-terri-icon linearicons-thumbs-up"></span>
+                  <div class="services-terri-caption"><span class="services-terri-icon linearicons-thumbs-up"></span>
                     <h5 class="services-terri-title"><a href="https://github.com/CinthiaVilcachagua/scl-2018-12-bc-core-data-lovers">Worldbank</a></h5>
                   </div>
                 </article>
