añadiendo mas skills a mi info

--- a/src/index.html
+++ b/src/index.html
@@ -380,6 +380,20 @@
             <div class="col-sm-6 col-lg-4 col-xl-3">
               <!-- Product-->
               <article class="product wow fadeInLeft" data-wow-delay=".05s">
+                <div class="product-figure"><img src="./images/react2.png" alt="" width="161" height="162"/>
+                </div>
+                <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star text-gray-13"></span><span class="mdi mdi-star text-gray-13"></span>
+                </div>
+                <h6 class="product-title">React.js</h6>
+                <!-- <div class="product-button">
+                  <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to cart</a></div>
+                  <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View Product</a></div>
+                </div> -->
+              </article>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3">
+              <!-- Product-->
+              <article class="product wow fadeInLeft" data-wow-delay=".05s">
                 <div class="product-figure"><img src="./images/bootstrap.png" alt="" width="161" height="162"/>
                 </div>
                 <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star text-gray-13"></span><span class="mdi mdi-star text-gray-13"></span>
@@ -399,6 +413,20 @@
                 <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star text-gray-13"></span><span class="mdi mdi-star text-gray-13"></span>
                 </div>
                 <h6 class="product-title">Node.js</h6>
+                <!-- <div class="product-button">
+                  <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to cart</a></div>
+                  <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View Product</a></div>
+                </div> -->
+              </article>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3">
+              <!-- Product-->
+              <article class="product wow fadeInLeft" data-wow-delay=".05s">
+                <div class="product-figure"><img src="./images/wordPress.jpg" alt="" width="161" height="162"/>
+                </div>
+                <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star text-gray-13"></span><span class="mdi mdi-star text-gray-13"></span>
+                </div>
+                <h6 class="product-title">WordPress</h6>
                 <!-- <div class="product-button">
                   <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to cart</a></div>
                   <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View Product</a></div>
